# simple_slam_loop_closure

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
.circleci/: build.sh  config.yml
data/: ImageCollectionCoordinates.txt
include/: frame_descriptor.h  utils.h
scripts/: download_data.sh  ground_truth_comparison.py  precision_recall.py
src/: frame_descriptor.h  new_college.cpp  utils.h
